<resources>
    <string name="app_name">HaloFind</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_app_id">your app id</string>
    <string name="action_settings">Settings</string>
    <string name="accessToken">pk.eyJ1IjoibmdoaWExNDA2IiwiYSI6ImNpbW9keDd4dDAwZGt0c2x5cmZmM2FoaDEifQ.qprCoY2maYN_PJcSI2599Q</string>
    <string name="welcom_head_01">Healthy Food</string>
    <string name="welcom_content_01">Searching everything around you</string>
    <string name="welcom_head_02">Share and find together</string>
    <string name="welcom_content_02">Quick service restaurants in real time</string>
    <string name="welcom_head_03">Automatically update anything you want</string>
    <string name="welcom_content_03">Let you go and find everything</string>
    <string name="no_internet_go_wifi_settings">No Internet access now, please open Wifi settings to open Internet connection</string>
    <string name="facebook_app_id">1243188595710288</string>
    <string name="signin_with_email">Sign in with Email</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="search">Search for everything...</string>
    <string name="searchphoto">This photo was taken at...</string>
    <string name="press_back_again_to_exit">Press Back again to exit!</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="need_login">You have to Login or Register to add your location !!!</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="description_cropped_image">Cropped image</string>
    <string name="exis">Account Already exists</string>
    <string-array name="district_array">
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>
        <item> 4</item>
        <item> 5</item>
        <item> 6</item>
        <item> 7</item>
        <item> 8</item>
        <item> 9</item>
        <item> 10</item>
        <item> 11</item>
        <item> 12</item>
        <item> Thủ đức</item>
        <item> Tân phú</item>
        <item> Tân bình</item>
        <item> Phú nhuận</item>
        <item> Gò vấp</item>
        <item> Bình thạnh</item>
        <item> Bình tân</item>
    </string-array>

    <string-array name="category_array">
        <item> Ăn với người yêu</item>
        <item> Góc cà phê</item>
        <item> Ăn với gia đình</item>
        <item> Ăn với nhóm</item>
        <item> Tiệm bánh</item>
        <item> Hải sản</item>
        <item> Nướng và lẩu</item>
        <item> Nhật bản</item>
        <item> Pizza</item>
        <item> Ăn vặt vỉa hè</item>
        <item> Hàn quốc</item>
        <item> Ăn một mình</item>
    </string-array>
    <string name="pick_place">Pick a place</string>
    <string name="starbucks_search">Look for Starbucks</string>
    <string name="current_place">Current Place</string>
    <string name="upload">Upload</string>
    <string name="back">back</string>


    <string name="hello_world">Hello world!</string>
    <string name="no_maps">Google Maps V2 not available!</string>
    <string name="title_activity_login">Login</string>
    <string name="image">image</string>
    <string name="instagram">Instagram</string>
    <string name="login">Login</string>
    <string name="wonolo">Wonolo</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="try_again">Try Again</string>
    <string name="msg_no_network_connection">Cannot connect to internet.</string>
    <string name="msg_no_data">No Data</string>
    <string name="action_logout">Log out</string>
    <string name="msg_confirm_logout">Are you sure to logout ?</string>
</resources>
